--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header a {
@@ -29,11 +32,35 @@ body {
 
 .menu {
   width: 385px;
-  height: 24px;
 }
 
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 385px;
+  list-style: none;
+}
+
+.Header__button {
+  background: linear-gradient(115.11deg, #9021AC 16.38%, #C8459F 84.56%);
+  height: 54px;
+  width: 205px;
+  border-radius: 9px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
