--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@ body {
     height: 85px;
     background-color: #fff;
     display: flex;
+    align-items: center;
     a {
         color: inherit;
         text-decoration: none;
@@ -21,8 +22,21 @@ body {
 } 
 .menu {
     width:385px;
-    height: 24px;
 }
 .menu__list{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 385px;
+    list-style: none;
+}
+.Header__button {
+    background: linear-gradient(115.11deg, #9021AC 16.38%, #C8459F 84.56%);
+    height: 54px;
+    width: 205px;
+    border-radius: 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
