--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Manrope-Regular";
+  src: url("../fonts/Manrope-Regular.ttf");
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -5,12 +10,13 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
-  background-color: #F7F6FF;
+  background-color: #f7f6ff;
 }
 
 .header {
@@ -23,6 +29,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.08);
 }
 
 .header a {
@@ -30,8 +38,16 @@ body {
   text-decoration: none;
 }
 
+.logo {
+  height: 70px;
+  width: 325px;
+  margin-left: 103px;
+  margin-right: 108px;
+}
+
 .menu {
   width: 385px;
+  margin-right: 159px;
 }
 
 .menu__list {
@@ -47,10 +63,14 @@ body {
   height: 100%;
   width: 385px;
   list-style: none;
+  font-family: "Manrope-Regular";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .Header__button {
-  background: linear-gradient(115.11deg, #9021AC 16.38%, #C8459F 84.56%);
+  background: linear-gradient(115.11deg, #9021ac 16.38%, #c8459f 84.56%);
   height: 54px;
   width: 205px;
   border-radius: 9px;
@@ -63,4 +83,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: "Manrope-Regular";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: #fff;
 }
