--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,18 @@
-*{
-    box-sizing: border-box;
-margin: 0;
-padding: 0;
+@font-face {
+    font-family: "Manrope-Regular";
+    src: url("../fonts/Manrope-Regular.ttf");
 }
-html, body {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+html,
+body {
     height: 100%;
 }
 body {
-    background-color: #F7F6FF;
+    background-color: #f7f6ff;
 }
 .header {
     width: 100%;
@@ -15,28 +20,46 @@ body {
     background-color: #fff;
     display: flex;
     align-items: center;
+    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.08);
     a {
         color: inherit;
         text-decoration: none;
     }
-} 
-.menu {
-    width:385px;
 }
-.menu__list{
+.logo {
+    height: 70px;
+    width: 325px;
+    margin-left: 103px;
+    margin-right: 108px;
+}
+.menu {
+    width: 385px;
+    margin-right: 159px;
+}
+.menu__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
     width: 385px;
     list-style: none;
+    font-family: "Manrope-Regular";
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
 }
 .Header__button {
-    background: linear-gradient(115.11deg, #9021AC 16.38%, #C8459F 84.56%);
+    background: linear-gradient(115.11deg, #9021ac 16.38%, #c8459f 84.56%);
     height: 54px;
     width: 205px;
     border-radius: 9px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Manrope-Regular";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #fff;
 }
